Fix: Issue with the style of the restaurant boxes overflowing and increasing height really bad..

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -67,7 +67,7 @@
       width: 100%;
     }
     #reviews-list li p:nth-child(3) {
-      width:40.33%;
+      width:50.33%;
     }
     #reviews-list li p {text-align: justify;}
     #restaurant-hours {overflow-x: auto;width: 100%;}
