--- a/css/styles.css
+++ b/css/styles.css
@@ -488,9 +488,11 @@ nav h1 a {
   padding:0.5em;
   font-family: Arial, sans-serif;
   border-radius:5px;
-  width:25%;
+  width:40.33%;
   color: #fff;
   font-weight: 500;
+  font-size: 1em;
+  text-align: center;
   }
 #reviews-list li p:last-child {word-spacing:1px; line-height: 1.5em;font-size: 1em;}
 #restaurant-hours {border:1px solid #ccc;width:100%;}
